crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@133.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_div VALUES (2,7,'1214843772391778.127361407585140553741220126410637250571020684739034685508176000812180032686291124045768750332493129822580347351032145964983629059968936201592138368806173099130176852606440296388856520582890650384142745607345709716826703676313341953999327129144154152914234659001555055379537780751567782847296067128932113870102563522810980359433259696591977617184951677390423898232135100000764121508662830515405980450892222598485287609657612482190264517684867291774820716746063133066053446257163185646067618679478975882247893469409405379034723543061767846895135644429012095930584952053545016706315299076691015196261253199176743281648949731423486208098120903720124071047872917636988241710583721537777321338769039241700203546247947405745989053846970910400831817998342969657501678430211657755864160072525313889413731419647001970593');"
---
InsertStmt@0..867
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_div"
  Whitespace@23..24 " "
  SelectStmt@24..865
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..865
      AConst@32..33
        Iconst@32..33 "2"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "7"
      Ascii44@35..36 ","
      AConst@36..865
        Sconst@36..865 "'1214843772391778.127 ..."
  Ascii41@865..866 ")"
  Ascii59@866..867 ";"

